PJFCB-3576 Connecting to LDAP instance is only possible using IP address.--add-exports=jdk.naming.dns/com.sun.jndi.dns=ALL-UNNAMED (#57)